--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
-<p>
-  login works!
+<div>
   <button (click)="login()">Normal User Log in </button> |
   <button (click)="loginAdmin()">Admin User Log in </button>
-</p>
+</div>
