Exchange Bulma for Material; Layout changes

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,13 @@
-<div>
-  <button (click)="login()">Normal User Log in </button> |
-  <button (click)="loginAdmin()">Admin User Log in </button>
+<div class="container">
+  <mat-card class="login-card">
+      <div>
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <input formControlName="email" placeholder="Email">
+      <input formControlName="password" type="password" placeholder="Password">
+
+      <button mat-raised-button type="submit" class="btn" color="primary">Login</button>
+    </form>
+    <!-- <button mat-raised-button  class="btn" color="primary" (click)="loginAdmin()">Admin User Log in </button> -->
+    </div>
+  </mat-card>
 </div>
